--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "canvas": "^2.11.2",
     "chrono-node": "^2.7.0",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "node-telegram-bot-api": "^0.61.0"
+    "node-telegram-bot-api": "^0.61.0",
+    "yandex-disk": "^0.0.8"
   }
 }
